tdf#167385 sw: Keep AnnotationWin menu up to date

Since

    commit f075fa01cb4f74185f13eb0a8d7f84cf1f47af49
    Author: Michael Weghorn <m.weghorn@posteo.de>
    Date:   Tue Aug 22 10:26:32 2023 +0200

        tdf#141101 tdf#101886 a11y: Restore previous focus on col/line popup close

, the menu button toggled handler is no more called before
the menu shows (at least for the vcl/SalInstanceMenuButton
implementation).

Therefore, instead of relying on that handler, update the
menu when initializing the AnnotationWin controls and in
SwAnnotationWin::UpdateData instead, to make sure it stays
up to date.

Change-Id: I0fe42b633679488fa0d9262c8a840fbe0b93f76a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195376
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit 9c9357a350d8e4ca532af36ea26a2fd90e6c9257)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195485
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>